--- a/src/assets/style/cmps/_header.scss
+++ b/src/assets/style/cmps/_header.scss
@@ -11,51 +11,56 @@
     justify-content: space-between;
     align-items: center;
     padding-bottom: 50px;
-    
+
     img {
         height: 50px;
         width: 50px;
     }
 }
+
 .right-nav {
-    display: flex;
+    display: none;
+    @include for-narrow-layout {
+        display: flex;
+    }
+
     align-items: center;
     a {
-    font-family: Roboto;
+        font-family: Roboto;
 
         color: $primaryClr;
         font-size: 1.2rem;
         margin-right: 10px;
-        
-        &:last-child{
+
+        &:last-child {
             margin-right: 0px;
         }
     }
-    .resume{
+    .resume {
         color: white;
         font-size: 1.3rem;
         padding: 2px 6px;
         border-radius: 5px;
         margin-left: 5px;
         border: 1px solid white;
-        &:hover{
-            animation: fill-btn 0.5s  linear forwards ;
+        &:hover {
+            animation: fill-btn 0.3s linear forwards;
         }
         @keyframes fill-btn {
-            to{
+            to {
                 background-color: $primaryClr;
                 color: black;
                 border: 1px solid transparent;
             }
         }
     }
-    }
-    
-    .left-nav {
-    svg{
+}
+
+.left-nav {
+    svg {
         display: block;
-        width:60px;
-        height:60px;
+        width: 60px;
+        height: 60px;
     }
     display: flex;
     .toggle-btn {
@@ -76,58 +81,60 @@
     }
 }
 .menu-btn {
-    display: none;
-    @include for-mobile-layout {
-        display: block;
+    
+    display: block;
+    width: 50px;
+    height: 50px;
+    fill: white;
+    padding-right: 10px;
+    cursor: pointer;
+    @include for-narrow-layout {
+        display: none;
     }
 }
 
-// .mobile-nav {
-//     display: flex;
-//     flex-direction: column;
-//     background-color: black;
-//     z-index: 20;
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     height: 100vh;
-//     padding: 0 16px;
-//     animation: nav-animatin 0.5s;
+.mobile-nav {
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $backgroundClr;
+    z-index: 20;
+    position: fixed;
+    width: 100vw;
+    padding: 0 16px;
+    animation: nav-animatin ease-in 0.5s forwards;
+    
+    @include for-narrow-layout {
+        display: none;
+    }
+    a {
+        color: white;
+        width: 100vw;
+        text-align: center;
+        font-size: 2rem;
+        padding: 10px;
+        border-bottom: 1px solid rgba(128, 128, 128, 0.256);
+        &:hover {
+            background-color: gray;
+        }
+        &:first-of-type {
+            margin-top: 10px;
+        }
+    }
+    img {
+        margin-top: 20px;
+        align-self: center;
+        height: 100px;
+        width: 100px;
+    }
+}
 
-//     a {
-//         color: white;
-//         font-size: 2rem;
-//         padding: 10px;
-//         &:hover {
-//             background-color: gray;
-//         }
-//         &:first-of-type {
-//             margin-top: 10px;
-//         }
-//     }
-//     img {
-//         margin-top: 20px;
-//         align-self: center;
-//         height: 100px;
-//         width: 100px;
-//     }
-// }
-
-// @keyframes nav-animatin {
-//     0% {
-//         left: -100px;
-//     }
-//     100% {
-//         left: 0;
-//     }
-// }
-
-// .background-menu {
-//     position: fixed;
-//     background-color: rgba(0, 0, 0, 0.7);
-//     top: 0;
-//     left: 0;
-//     height: 100vh;
-//     width: 100vw;
-//     z-index: 10;
-// }
+@keyframes nav-animatin {
+    0% {
+        top: -350px;
+    }
+    100% {
+        top: 100px;
+    }
+}
