--- a/src/assets/style/cmps/_top.scss
+++ b/src/assets/style/cmps/_top.scss
@@ -48,7 +48,7 @@
             @include for-narrow-layout {
                 width: 400px;
             }
-            @include for-normal-layout {
+            @include for-wide-layout {
                 width: 600px;
             }
             
